# Firmware

./: .clang-format  .clang-tidy  .cproject  .gitignore  .gitlab-ci.yml  .project  CMakeLists.txt  Makefile  README.md  WirelessCommunication.md
app/bs2018/: .cproject  .project  boot.ld  bs2018.mk  run.ld
app/bs2018/src/: cli.c  constants.h  hub.c  (+7 more)
app/ir2019/: .cproject  .project  boot.ld  ir2019.mk
app/main2016/: .cproject  .project  main2016.mk
app/main2019/: .cproject  .project  boot.ld  main2019.mk  run.ld
app/motor2019/: .cproject  .project  boot.ld  motor2019.mk
cmake/: EmbedResource.cmake  arm-none-eabi.toolchain.cmake  git_version.cmake  options.cmake  post_build.cmake
deploy/: README.txt
doc/: BSv3 FT Prog Template.xml  Pinout.xlsx  Powerboard v1 FT Prog Template.xml  formatter.xml  howto_log.adoc  workshop.adoc
docker/arm-none-eabi/: Dockerfile
launch/: Debug BS 2018 (Boot).launch  Debug BS 2018 (Run).launch  Debug MB 2016 (Run).launch  Debug MB 2019 (Boot).launch  Debug MB 2019 (Run).launch  Flash BS 2018 (Boot).launch  Flash BS 2018 (Release).launch  Flash BS 2018 (Run).launch  Flash MB 2016 (Boot).launch  Flash MB 2016 (Release).launch  Flash MB 2016 (Run).launch  Flash MB 2019 (Boot).launch  Flash MB 2019 (Release).launch  Flash MB 2019 (Run).launch  OpenOCD Server BS 2018.launch  OpenOCD Server MB 2016.launch  OpenOCD Server MB 2019.launch
lib/common/: f0xx.mk  f7xx.mk  f7xx_dp.mk  h7xx_dp.mk
lib/dsp/: dsp.mk  dsp_dp.mk  dsp_m0.mk
make/: compiler.mk  lib.mk  prog.mk
openocd/: bs2018.cfg  flash-bs2018.cfg  flash-mb2016.cfg  flash-mb2019.cfg  mb2016.cfg  mb2019.cfg
protoc/: Makefile  radio_protocol_command.proto  radio_protocol_wrapper.proto
scripts/: play_bot_recording.py  upload.sh  version.sh
scripts/logAnalyzer/: .gitignore  LogFileViewer.m  exportIRSensorData.m  loadLogFile.cpp  nnFunc.prj  prepNNData.m  prepNNData2.m  prepNNDataVel.m  processCtrlData.m  processDebugData.m  processRefData.m  processSkillData.m
src/bs2018/: CMakeLists.txt  base_station.c  base_station.h  boot.ld  cli.c  cli.h  common.ld  constants.h  hub.c  hub.h  main.c  main_bootloader.c  network.c  network.h  presenter.c  presenter.h  router.c  router.h  run.ld  shell_commands.c  shell_commands.h  system.c  vision.h  wifi.c
src/bs2018/dev/: led.c  led.h  shell.c  sky_fem.c  sx1280.c  tft.c  tft.h  touch.c  touch.h
src/bs2018/gui/: ids.h  menu.c  menu.h  robot_status.c  robot_status.h  setup.c  setup.h  top_bar.c  top_bar.h
src/bs2018/hal/: eth.h  led.c  rtc.h  tft.c  tft.h  touch.c  touch.h  usart1.h
src/bs2018/misc/: inventory.c  inventory.h
src/bs2018/network/: ethernet.c  igmpv3.c  igmpv3.h  inet.h  sntp.h
src/bs2018/protobuf-c/: messages_robocup_ssl_detection.pb-c.h  messages_robocup_ssl_refbox_log.pb-c.h  messages_robocup_ssl_wrapper.pb-c.c  messages_robocup_ssl_wrapper_legacy.pb-c.h  radio_protocol_command.pb-c.h
src/bs2018/sys/: eth0.c  eth0.h  rtc.c  rtc.h  spi3.c  spi3.h  tim2.c  tim5.c  tim5.h  usart1.c  usart1.h
src/bs2018/util/: wifi_module.c
src/ir2019/: CMakeLists.txt  adc.c  main.c  usart1.c
src/libs/: CMakeLists.txt  libs.cmake
src/main2016/: CMakeLists.txt  boot.ld  cli.c  constants.h  ext.c  ext.h  main.c  network_impl.c  power.c  presenter.c  robot_impl.c  run.ld  sdcard.h  spi4.h  test.c  test.h
src/main2016/hal/: buzzer.c  buzzer.h  diskio.c  ext_flash.h  kicker.h  led.c  led.h  motors.c  tft.h
src/main2019/: CMakeLists.txt  boot.ld  cli.c  common.ld  constants.h  ext.c  inventory.h  ir.c  ir.h  kicker.c  main.c  main_bootloader.c  microphone.c  microphone.h  motors.c  motors.h  network_impl.c  pattern_ident.c  pattern_ident.h  power.c  power.h  presenter.c  presenter.h  robot_impl.c  robot_pi.c  robot_pi.h  run.ld  sdcard.c  sdcard.h  shell_commands.c  spi2.c  spi2.h  spi4.c  spi4.h  system.c  system.h  tiger_bot.c  tiger_bot.h
src/main2019/dev/: adc_kicker.c  adc_kicker.h  buzzer.c  buzzer.h  drib_ir.c  drib_ir.h  imu.c  imu.h  leds_front.c  leds_front.h  leds_main.c  leds_main.h  mag.c  mag.h  motors.c  motors.h  port_exp.c  port_exp.h  power_mon.c  power_mon.h  raspberry_pi.c  raspberry_pi.h  shell.c  shell.h  sky_fem.c  sky_fem.h  sx1280.c  sx1280.h  tft.c  tft.h  touch.c  touch.h
src/main2019/gui/: ball_view.c  ball_view.h  dribbler.c  dribbler.h  ids.h  imu.c  imu.h  ir_gui.c  ir_gui.h  versions.c  versions.h
src/main2019/hal/: buzzer.c  buzzer.h  diskio.c  i2c2.c  i2c2.h  led.c  port_ex.c  tft.h  usart2.c  usart2.h  usb_fs.c
src/main2019/misc/: diskio.c  inventory.c  variant.c  variant.h
src/main2019/sys/: i2c2.c  i2c2.h  i2c5.c  i2c5.h  sdcard.c  sdcard.h  spi1.c  spi1.h  spi2.c  spi2.h  spi4.c  spi4.h  tim13.c  tim13.h  tim14.c  tim14.h  tim2.c  tim2.h  tim5.c  uart4.c  uart4.h  uart5.c  uart5.h  uart7.c  uart7.h  uart8.c  uart8.h  usart1.c  usart1.h  usart2.c  usart2.h  usart3.c  usart3.h  usart6.c  usart6.h  usb_fs.c  usb_fs.h
src/main2019/test/: test.c  test.h  test_common.c  test_common.h  test_experimental.c  test_experimental.h  test_imu.c  test_imu.h  test_kicker.c  test_kicker.h  test_motor.c  test_motor.h  tests.c  tests.h
src/motor2019/: CMakeLists.txt  adc.c  adc.h  dribbler.c  dribbler.h  dribbler_ctrl.c  dribbler_ctrl.h  dribbler_motor.c  dribbler_motor.h  drive.c  drive_ctrl.c  drive_motor.c  drive_motor.h  main.c  main.h  usart1.c  usart1.h
src/robot/: ctrl_panthera.c  ctrl_panthera.h  fusion_ekf.c  fusion_ekf.h  model_enc.h  model_fric.c  network.c  network.h  robot.c  robot.cmake  robot.h  robot_math.c  robot_math.h  robot_specs.c  robot_specs.h  skill_basics.c  skill_basics.h  skill_circle_ball.c  skill_circle_ball.h  skill_fast_pos.c  skill_fast_pos.h  skill_kick_ball.c  skill_kick_ball.h  skill_sine.c  skill_sine.h  skills.c  skills.h  traj_bang_bang.c  traj_bang_bang.h
src/shared/: commands.h  errors.h  ext_commands.h  intercom_constants.h  log_msgs.c  log_msgs.h  shared.cmake  struct_ids.h  test_data.h  version.c
tests/: CMakeLists.txt
tests/arm_math_mock/: arm_math.c  arm_math.h
tests/libs/: CMakeLists.txt
tests/libs/util/: CMakeLists.txt  test_line.cpp
(+680 files in other folders)
